--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://shotiq-pjwj.onrender.com"
+      "destination": "https://shotiq-pjwj.onrender.com/api/:path*"
     },
     {
       "source": "/(.*)",
