--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,8 @@ services:
   - type: web
     name: nba-shot-predictor-api
     runtime: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install -r requirements-prod.txt
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: "3.11"
-
