Implement caching with Redis and in-process fallback for API responses; enhance UI styles for better user experience.

--- a/render.yaml
+++ b/render.yaml
@@ -7,3 +7,5 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: "3.11"
+      - key: REDIS_URL
+        value: ""  # e.g. rediss://default:<password>@<host>:<port>
