Update API destination in vercel.json and add redeployment instructions

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://shotiq-mo2p.onrender.com/api/:path*"
+      "destination": "http://144.24.135.111/api/:path*"
     },
     {
       "source": "/(.*)",
